[project]
name = "ai-agent-url-shortener"
version = "0.1.0"
description = "Agentic SDLC Orchestrator Prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.1.4",
    "langchain-openai>=0.1.16",
    "langchain-core>=0.2.10",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.31",
    "rich>=13.7.1"
]
